styles.css
/* ... */
.assignfeedback_editpdfplus_widget .assignfeedback_editpdfplus_unsavedchanges.haschanges,
.assignfeedback_editpdfplus_widget .assignfeedback_editpdfplus_unsavedchanges_edit.haschanges {
    display: inline-block;
}
.assignfeedback_editpdfplus_widget .assignfeedback_editpdfplus_unsavedchanges,
.assignfeedback_editpdfplus_widget .assignfeedback_editpdfplus_unsavedchanges_edit {
    display: none;
    position: absolute;
    left: 20px;
    top: 60px;
}

.yui3-colourpicker-hidden,
.yui3-commentsearch-hidden,
.yui3-commentmenu-hidden {
    display: none;
}

.lineplusbutton,
.lineplusbutton:hover {
    text-decoration: line-through;
}

.assignfeedback_editpdfplus_widget .pageheader button img {
    padding-top: 3px;
    vertical-align: top;
}
.assignfeedback_editpdfplus_widget .pageheader button:active {
    background-color: #ccc;
}
.assignfeedback_editpdfplus_widget .pageheader select,
.assignfeedback_editpdfplus_widget .pageheader button {
    background: none;
    padding: 0 7px;
    border: 0;
    border-radius: 0;
    margin: 0;
    height: 30px;
    vertical-align: top;
    cursor: pointer;
}
.assignfeedback_editpdfplus_widget .pageheader select {
    vertical-align: top;
    -webkit-appearance: none;
    -moz-appearance: menulist-text;
    background-color: #fff;
    padding: 0 2px;
}
.assignfeedback_editpdfplus_widget .pageheader select::-ms-expand {
    display: none;
}

.assignfeedback_editpdfplus_widget .pageheader .navigation button + button,
.assignfeedback_editpdfplus_widget .pageheader .toolbar button + button,
.assignfeedback_editpdfplus_widget .pageheader .navigation select + button,
.assignfeedback_editpdfplus_widget .pageheader .toolbar select + button {
    border-left: 1px solid #ccc;
    border-right: 0;
}

.assignfeedback_editpdfplus_widget .pageheader .navigation button {
    border-right: 1px solid #ccc;
}

.assignfeedback_editpdfplus_widget .pageheader .toolbar,
.assignfeedback_editpdfplus_widget .pageheader .navigation-search,
.assignfeedback_editpdfplus_widget .pageheader .navigation {
    border: 1px solid #ccc;
    border-bottom-color: #b3b3b3;
    border-radius: 4px;
    margin: 10px 4px;
    background-color: white;
    height: 30px;
    line-height: 30px;
    padding: 0;
}

.assignfeedback_editpdfplus_commentsearch ul {
    max-height: 400px;
    overflow-y: auto;
    padding: 1em;
}
.assignfeedback_editpdfplus_commentsearch ul li pre {
    background-color: #efefef;
    white-space: pre-wrap;
    word-break: break-word;
}
.assignfeedback_editpdfplus_commentsearch ul li pre:hover {
    background-color: #ddd;
}
.assignfeedback_editpdfplus_commentsearch ul li {
    margin: 2px;
}
.assignfeedback_editpdfplus_commentsearch a pre {
    font-family: helvetica;
    margin: 0;
    padding: 4px;
}

.assignfeedback_editpdfplus_widget .navigation-search,
.assignfeedback_editpdfplus_widget .navigation {
    float: left;
}
.assignfeedback_editpdfplus_widget .toolbar button {
    box-shadow: none;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
}
.assignfeedback_editpdfplus_widget .toolbar {
    float: right;
}
.assignfeedback_editpdfplus_widget .navigation,
.assignfeedback_editpdfplus_widget .navigation-search,
.assignfeedback_editpdfplus_widget .toolbar {
    display: inline-block;
}

.assignfeedback_editpdfplus_widget .bar {
    width: 0%;
}

.assignfeedback_editpdfplus_widget .btn-toolbar {
    min-height:50px;
}

.assignfeedback_editpdfplus_colourpicker ul {
    margin: 0;
}

.assignfeedback_editpdfplus_commentmenu li.quicklist_comment {
    width: 150px;
}
.assignfeedback_editpdfplus_commentmenu li.quicklist_comment a {
    white-space: nowrap;
    display: inline-block;
    max-width: 130px;
    overflow: hidden;
    text-overflow: ellipsis;
}
.assignfeedback_editpdfplus_commentmenu a.delete_quicklist_comment {
    float: right;
}
.assignfeedback_editpdfplus_dropdown button {
    border: 0;
    background: none;
    padding: 6px 7px;
    border-radius: 0;
    border-top: 1px solid #ccc;
}
.assignfeedback_editpdfplus_dropdown li:first-child button {
    border-top: 0;
}
.moodle-dialogue-base .moodle-dialogue.assignfeedback_editpdfplus_dropdown .moodle-dialogue-wrap {
    box-shadow: none;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    border-radius: 4px;
}
.moodle-dialogue-base .moodle-dialogue.assignfeedback_editpdfplus_dropdown .moodle-dialogue-bd {
    padding: 0;
}
.moodle-dialogue-base .assignfeedback_editpdfplus_dropdown .moodle-dialogue-wrap .moodle-dialogue-hd,
.moodle-dialogue-base .assignfeedback_editpdfplus_dropdown .moodle-dialogue-wrap .moodle-dialogue-ft {
    display: none;
}
.assignfeedback_editpdfplus_menu li hr {
    margin: 0;
}
.assignfeedback_editpdfplus_menu li a {
    text-decoration: none;
    color: #555;
    margin: 10px;
}
.assignfeedback_editpdfplus_menu li:hover,
.assignfeedback_editpdfplus_menu li:hover a,
.assignfeedback_editpdfplus_menu li a:hover {
    background-color: #ebebeb;
    background-image: radial-gradient(ellipse at center, #fff 60%, #dfdfdf 100%);
}
ul.assignfeedback_editpdfplus_menu {
    margin: 0;
    padding-left: 0;
}
.assignfeedback_editpdfplus_menu li {
    list-style-type: none;
    margin: 0;
    border-radius: 4px;
}
.assignfeedback_editpdfplus_menu li img {
    height: auto;
}
.assignfeedback_editpdfplus_menu li button {
    margin: 0;
    background: none;
}

.assignfeedback_editpdfplus_widget .pageheader button:hover {
    background-color: #ebebeb;
    background-image: radial-gradient(ellipse at center, #fff 60%, #dfdfdf 100%);
}

.assignfeedback_editpdfplus_widget .commentdrawable img {
    padding: 1px;
}

.assignfeedback_editpdfplus_widget .commentdrawable a {
    float: right;
    position: relative;
    left: -17px;
    top: 2px;
    height: 14px;
    background-color: white;
    border-left: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    line-height: 14px;
}
/* ... */

